# ff12tza-utils

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: convert_item_list.py  convert_offset.py  item_data.json  name_offset.json  order.json  raw_item_list.txt  treasure_data.json
docs/: README.md  license_board.md  license_ids.tsv  treasure.md
docs/battle_pack/: README.md  magick_meta.md
docs/identifiers/: 3D Model Identifiers.md  Action Identifiers.md  Character Identifiers.md  Job Identifiers.md  Locations.md  Name Identifiers.md  README.md  Story Progress.md
docs/identifiers/inventory/: Bazaar Goods.md  Equipment.md  Item Sets.md  Items.md  Key Items.md  Loot.md  Magicks.md  Mist.md  Technicks.md
src/: error.rs  main.rs  opt.rs  utils.rs
src/battle_pack/: io.rs  mod.rs  reader.rs
src/magick_order/: base_order.rs  base_order.txt  mod.rs
src/treasure/: mod.rs  plotter.rs
src/vbf/: mod.rs
