[package]
name = "ff12tza-utils"
version = "0.1.0"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
walkdir = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3"
plotters = "0.2.12"

