[package]
name = "ff12tza-utils"
version = "0.1.0"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
edition = "2018"

[features]
battle_fuse = ["fuse"]

[dependencies]
structopt = "0.3"
walkdir = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3"
plotters = "0.2.12"
desert = "1.0.3"
fuse = { git = "https://github.com/zargony/fuse-rs", optional = true }
rand = "0.7.3"
hex = "0.4.2"
